@@ -1,5 +1,11 @@
 2007-07-16  Jakub Jelinek  <jakub@redhat.com>
 
+	[BZ #4792]
+	* stdlib/stdlib.h (realloc): Remove __attribute_malloc__.
+	* malloc/malloc.h (realloc): Likewise.
+
+2007-07-16  Jakub Jelinek  <jakub@redhat.com>
+
 	* libio/iopopen.c (_IO_new_proc_open): Don't close child_std_end
 	if one of proc_file_chain streams has that fileno.
 	* stdio-common/Makefile (tests): Add tst-popen2.
